--- a/league.html
+++ b/league.html
@@ -7,11 +7,11 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+<link rel = "stylesheet" href="index.css">
     <title>League</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
   <div class="container-fluid">
     <a class="navbar-brand" href="sfl">SFL</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,13 +46,15 @@
 </nav>
 <div class="container">
   <br><br>
+  <div class="jumbotron jumbotron-fluid">
     <div class="container">
-
-    <a href="dundee-stats">SFL Dundee Stats</a><br /><br /> <!-- in stats, show twitter display of the team of the week for each week, using twitter links as data -->
-    <a href="photos">SFL Dundee Photos</a><br /><br />
-    Scottish Futsal Links<br /><br /> <!-- twitter and web inks -->
+      <center>
+    <a href="dundee-stats">SFL Dundee Stats</a><br /><br /><br />  <!-- in stats, show twitter display of the team of the week for each week, using twitter links as data -->
+    <a href="photos">SFL Dundee Photos</a><br /><br /><br />
+    Scottish Futsal Links<br /><br /><br />  <!-- twitter and web inks -->
+  </center>
     </div>
-
+  </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
