--- a/submit_dundee.html
+++ b/submit_dundee.html
@@ -7,11 +7,11 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+<link rel = "stylesheet" href="index.css">
     <title>Admin</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
   <div class="container-fluid">
     <a class="navbar-brand" href="sfl">SFL</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,6 +46,8 @@
 </nav>
 
 <div class="container">
+    <br><br>
+  <div class="jumbotron jumbotron-fluid">
   <div class="mx-auto" style="width: 400px;">
     <br /><br />
   <center><b>SFL Dundee League Results</b></center>
@@ -107,9 +109,11 @@
     </tbody>
   </table>
 </div>
-</div>
 <br />
 <center><button type="submit">ALLOCATE POINTS</button></center>
+</div>
+</div>
+
 <br /><br />
   <!-- Have each team's name in a list -->
   <!-- display current round number & date -->
