--- a/admin.html
+++ b/admin.html
@@ -7,11 +7,11 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+<link rel = "stylesheet" href="index.css">
     <title>Admin</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
   <div class="container-fluid">
     <a class="navbar-brand" href="sfl">SFL</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,7 +44,11 @@
     </div>
   </div>
 </nav>
+
 <div class="container">
+    <br><br>
+  <div class="jumbotron jumbotron-fluid">
+    <div class="container">
   <br><br>
     <h1>Admin Page || Authorised Access Only </h1>
     <p>This page is for updating the league stats. Only those authorised to update the team scores may do so.
@@ -54,6 +58,7 @@
   <br /><br />
   <div class="mx-auto" style="width: 300px;">
   <center><b><a href="submit_dundee">Submit Dundee League Results</a></b></center>
+</div>
 </div>
 </div>
 
