--- a/dundee-stats.html
+++ b/dundee-stats.html
@@ -7,11 +7,11 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+<link rel = "stylesheet" href="index.css">
     <title>League</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-light bg-primary">
   <div class="container-fluid">
     <a class="navbar-brand" href="sfl">SFL</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,11 +44,12 @@
     </div>
   </div>
 </nav>
-<br />
-<br />
-<center><b>SFL Dundee League Table 2021-22</b></center>
-<br />
+<div class="container">
+  <br><br>
+  <div class="jumbotron jumbotron-fluid">
 <div class="mx-auto" style="width: 500px;">
+  <center><b>SFL Dundee League Table 2021-22</b></center>
+  <br />
   <br />
   <div class="row">
     <div class="col-6">
@@ -165,6 +166,8 @@
 <br /><br />
 <center><a href="league">Go Back A Page</a></center>
 <br /><br />
+</div>
+</div>
 </div>
 
     <!-- Optional JavaScript -->
