--- a/photos.html
+++ b/photos.html
@@ -11,25 +11,11 @@
     <title>League</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
   <div class="container-fluid">
     <a class="navbar-brand" href="sfl">SFL</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <!-- <span class="navbar-toggler-icon"> -->
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="league">League</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="admin">Admin</a>
-          </li>
-        </ul>
-      <!-- </span> -->
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="index">Home</a>
@@ -41,9 +27,24 @@
           <a class="nav-link" href="admin">Admin</a>
         </li>
       </ul>
+    <!-- </span> -->
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="index">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="league">League</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="admin">Admin</a>
+      </li>
+    </ul>
     </div>
   </div>
 </nav>
+
 <div class="container">
   <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
     <div class="carousel-inner">
