--- a/submit_dundee.html
+++ b/submit_dundee.html
@@ -7,7 +7,6 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<link rel = "stylesheet" href="index.css">
     <title>Admin</title>
   </head>
   <body>
@@ -49,60 +48,61 @@
     <br><br>
   <div class="jumbotron jumbotron-fluid">
   <div class="mx-auto" style="width: 400px;">
-    <br /><br />
   <center><b>SFL Dundee League Results</b></center>
-  <br /><br />
+  <br />
+  <center>ROUND 9</center>
+  <br /></br />
   <table class="table">
     <thead>
       <tr>
-        <th scope="col">#</th>
+        <th scope="col"> </th>
         <th scope="col">Team</th>
         <th scope="col">Points</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <th scope="row">1</th>
+        <th scope="row"></th>
         <td>Var Team Name</td>
         <td>1/2/3</td>
       </tr>
       <tr>
-        <th scope="row">2</th>
+        <th scope="row"></th>
         <td>Var Team Name</td>
         <td>1/2/3</td>
       </tr>
       <tr>
-        <th scope="row">3</th>
+        <th scope="row"></th>
         <td>Var Team Name</td>
         <td>1/2/3</td>
       </tr>
       <tr>
-        <th scope="row">4</th>
+        <th scope="row"></th>
         <td>Var Team Name</td>
         <td>1/2/3</td>
       </tr>
       <tr>
-        <th scope="row">5</th>
+        <th scope="row"></th>
         <td>Var Team Name</td>
         <td>1/2/3</td>
       </tr>
       <tr>
-        <th scope="row">6</th>
+        <th scope="row"></th>
         <td>Var Team Name</td>
         <td>1/2/3</td>
       </tr>
       <tr>
-        <th scope="row">7</th>
+        <th scope="row"></th>
         <td>Var Team Name</td>
         <td>1/2/3</td>
       </tr>
       <tr>
-        <th scope="row">8</th>
+        <th scope="row"></th>
         <td>Var Team Name</td>
         <td>1/2/3</td>
       </tr>
       <tr>
-        <th scope="row">9</th>
+        <th scope="row"></th>
         <td>Var Team Name</td>
         <td>1/2/3</td>
       </tr>
